# thingsboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  test_adhesive_curing.xlsx
.claude/: settings.local.json
.claude/tmp-fixes/: supervisor.py
db/: init-db.sql
db/migrations/: 001_initial.sql  002_lines_devices.sql  003_device_sort_order.sql  004_product_model.sql  005_experiment_tables.sql  006_datasets.sql  007_experiment_device_id.sql
docker/opencode-web/: Dockerfile
openclaw/config/: openclaw.json
scripts/: run-api.sh  run-consumer.sh  run-gateway.sh  seed-db.py
tests/: test_consumer_entrypoint.py  test_deep_agent.py  test_entrypoints.py  test_skills.py
tests/agent/: test_experiment_tools.py  test_parameter_tools.py  test_sandbox.py  test_system_tools.py
tests/analysis/: test_correlation.py  test_dataset.py  test_importance.py  test_line_repository.py  test_line_schemas.py  test_optimization.py  test_pareto.py  test_profiling.py  test_recommendation.py  test_regression.py  test_spc.py
tests/api/: test_analysis_api.py  test_app.py  test_mock_routes.py  test_parameters_api.py
tests/common/: test_repositories.py  test_schemas.py  test_settings.py
tests/consumer/: test_handler.py
tests/gateway/: test_app.py
tests/integration/: test_analysis_pipeline.py  test_data_pipeline.py  test_parameter_lifecycle.py
tests/mock/: test_cli.py  (+6 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
windows-build/: .gitignore  build-all.bat  build-windows.md
(+283 files in other folders)
