[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "process-opt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "asyncpg",
    "nats-py",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "pandas",
    "httpx",
    "click",
    "openpyxl",
    "python-multipart",
    "docker>=7.0.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "mypy",
]

[project.scripts]
process-opt-gateway = "process_opt.gateway.main:main"
process-opt-api = "process_opt.api.main:main"
process-opt-consumer = "process_opt.consumer.main:main"
process-opt-mock = "process_opt.mock.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"process_opt.knowledge" = ["templates/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
